Added all the register and loging logic

--- a/PortfolioManager/src/app/top-secret/index/index.component.html
+++ b/PortfolioManager/src/app/top-secret/index/index.component.html
@@ -11,8 +11,8 @@
               </thead>
               <tbody>
                 <tr *ngFor="let claim of claims">
-                  <td>{{claim.Email}}</td>
-                  <td>{{claim.Name}}</td>                   
+                  <td>{{claim.email}}</td>
+                  <td>{{claim.name}}</td>                   
                 </tr>                 
               </tbody>
             </table>            
