--- a/PortfolioManager/src/app/shell/header/header.component.html
+++ b/PortfolioManager/src/app/shell/header/header.component.html
@@ -1,17 +1,34 @@
-<header> 
-  <div class="navbar navbar-dark bg-dark box-shadow">
-    <div class="container d-flex justify-content-between">
-      <a routerLink="/" class="navbar-brand d-flex align-items-center">
-        <strong>OAuth Client</strong>
+<mat-toolbar>
+  <div class="container d-flex justify-content-between">
+    <a routerLink="/" class="navbar-brand d-flex align-items-center">
+      <strong>Portfolio Manager</strong>
+    </a>
+    <nav *ngIf="!isAuthenticated" class="my-2 my-md-0 mr-md-3">
+      <a class="p-2 text-light" routerLink="/register">Signup</a>
+      <a class="p-2 text-light" routerLink="/login">Login</a>
+    </nav>
+    <nav *ngIf="isAuthenticated" class="my-2 my-md-0 mr-md-3">
+
+      <a class="dropdown-toggle mt-5">
+        {{name}} Profile
       </a>
-      <nav *ngIf="!isAuthenticated" class="my-2 my-md-0 mr-md-3">
-         <a class="p-2 text-light" routerLink="/register">Signup</a> 
-         <a class="p-2 text-light" routerLink="/login">Login</a>     
-      </nav>
-      <nav *ngIf="isAuthenticated" class="my-2 my-md-0 mr-md-3">
-         <a class="p-2 text-light" routerLink="/topsecret">Top Secret Area</a>  
-         <a class="p-2 text-light" (click)="signout()" href="javascript:void(0)">Signout {{name}}</a>               
-      </nav>
-    </div>    
+
+      <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+        <a class="dropdown-item" href="#">
+          <i class="fa fa-user">
+          </i>
+          Edit profile
+        </a>
+        <div class="dropdown-divider"></div>
+        <a class="dropdown-item" (click)="signout()" href="javascript:void(0)">
+          <i class="fa fa-sign-out">
+          </i>
+          Signout
+        </a>
+      </div>
+
+      <a class="p-2 text-light" routerLink="/topsecret">Top Secret Area</a>
+      <a class="p-2 text-light" (click)="signout()" href="javascript:void(0)">Signout {{name}}</a>
+    </nav>
   </div>
-</header>
+</mat-toolbar>
