--- a/PortfolioManager/src/app/account/register/register.component.html
+++ b/PortfolioManager/src/app/account/register/register.component.html
@@ -9,7 +9,7 @@
           <input type="text" id="name" name="name" [(ngModel)]="userRegistration.name" class="form-control"
             placeholder="First name" required>
             <label for="name" class="sr-only">Last Name</label>
-          <input type="text" id="name" name="lastName" [(ngModel)]="userRegistration.lastName" class="form-control"
+          <input type="text" id="lastName" name="lastName" [(ngModel)]="userRegistration.lastName" class="form-control"
             placeholder="Last name" required>
         </div>
         
