--- a/PortfolioManager/src/app/shell/header/header.component.html
+++ b/PortfolioManager/src/app/shell/header/header.component.html
@@ -4,8 +4,8 @@
       <strong>Portfolio Manager</strong>
     </a>
     <nav *ngIf="!isAuthenticated" class="my-2 my-md-0 mr-md-3">
-      <a class="p-2 text-light" routerLink="/register">Signup</a>
-      <a class="p-2 text-light" routerLink="/login">Login</a>
+      <a class="p-2 text-light" routerLinkActive="active" routerLink="/register">Signup</a>
+      <a class="p-2 text-light" routerLinkActive="active" routerLink="/login">Login</a>
     </nav>
     <nav *ngIf="isAuthenticated" class="my-2 my-md-0 mr-md-3">
 
